# sarif-react-dashboard

./: .gitignore  CMakeLists.txt  README.md  docker-compose.yml  run.txt  sdkconfig
.github/workflows/: build-and-push.yaml  codacy-analysis.yaml  codeql-analisis.yaml  pipeline.yml  static-code-analisis.yaml
Components/print_hello/: CMakeLists.txt  print_hello.c
Components/print_hello/include/: print_hello.h
Dockerfiles/: Dockerfile.esp-idf  Dockerfile.qemu  Dockerfile.runner  Dockerfile.runner-with-docker
code/: CMakeCache.txt  CMakeLists.txt  config.env  kconfigs.in  kconfigs_projbuild.in  partitions.csv  sdkconfig  sdkconfig.defaults  sdkconfig.esp32cam
code/components/comp_configfile/: CMakeLists.txt
code/components/comp_controlGPIO/: CMakeLists.txt  server_GPIO.cpp  server_GPIO.h
code/components/comp_controlcamera/: CMakeLists.txt
code/components/comp_fileserver/: CMakeLists.txt
code/components/comp_flowcontroll/: CMakeLists.txt  ClassFlowControll.cpp  ClassFlowControll.h  MainFlowControl.cpp  MainFlowControl.h
code/components/comp_helper/: CMakeLists.txt
code/components/comp_image_proc/: CMakeLists.txt
code/components/comp_logfile/: CMakeLists.txt
code/components/comp_tfliteclass/: CMakeLists.txt
code/components/comp_time_sntp/: CMakeLists.txt
code/components/comp_wlan/: CMakeLists.txt  connect_wlan.cpp
code/components/esp_psram/: cmake_install.cmake
code/components/jomjol_helper/: sdcard_init.c
code/config/: kconfig_menus.json  sdkconfig.cmake  sdkconfig.h  sdkconfig.json
code/include/: defines.h
code/main/: CMakeLists.txt  main.cpp  version.cpp
code/sd-card/html/: version.txt
main/: CMakeLists.txt  main.c
sd-card/html/: version.txt
